@@ -12,8 +12,14 @@ New in this Isabelle version
 * Old-style {* verbatim *} tokens have been discontinued (legacy feature
 since Isabelle2019). INCOMPATIBILITY, use \<open>cartouche\<close> syntax instead.
 
-* Session ROOT files support 'chapter_definition', in order to associate
-a description for presentation purposes.
+* Session ROOT files support 'chapter_definition' entries (optional).
+This allows to associate additional information as follows:
+
+  - "chapter_definition NAME (GROUPS)" to make all sessions that belong
+  to this chapter members of the given groups
+
+  - "chapter_definition NAME description TEXT" to provide a description
+  for presentation purposes
 
 
 *** Isabelle/VSCode Prover IDE ***
